force-app/main/default/objects/Implementation_Health_Policy__mdt/Implementation_Health_Policy__mdt.object-meta.xml
<CustomObject><label
  >Implementation Health Policy</label><pluralLabel
  >Implementation Health Policies</pluralLabel><visibility
  >Public</visibility></CustomObject>