force-app/main/default/objects/Implementation_Health_Policy__mdt/fields/Critical_Issue_Triggers_Red__c.field-meta.xml
<CustomField>
    <fullName>Critical_Issue_Triggers_Red__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Critical Issue Triggers Red</label>
    <type>Checkbox</type>
</CustomField>