force-app/main/default/objects/Implementation_Health_Policy__mdt/fields/High_Issue_Amber_Threshold__c.field-meta.xml
<CustomField>
    <fullName>High_Issue_Amber_Threshold__c</fullName>
    <label>High Issue Amber Threshold</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>