force-app/main/default/objects/Implementation_Health_Policy__mdt/fields/Overdue_Amber_Days__c.field-meta.xml
<CustomField>
    <fullName>Overdue_Amber_Days__c</fullName>
    <label>Overdue Amber Days</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>